TSK-8179 -- перекрёстные ссылки МЧД, готово

--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPrincipalInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPrincipalInfo_CL.adoc
@@ -1,6 +1,6 @@
-= PowerOfAttorneyFNSDOVEL502Data.RussianCompanyInfo1 -- класс
+= PowerOfAttorneyFNSDOVEL502Data.RetrustPrincipalInfo -- класс
 
-Сведения о российском юридическом лице (СведЮЛТип) -- 4.19.
+Сведения о доверителе в порядке передоверия (СвДоверщ) - 4.17
 
 * *Пространство имён:* `xref:Entities/Entities_NS.adoc[DocsVision.BackOffice.ObjectModel.Services.Entities]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -9,7 +9,7 @@
 
 [source,csharp]
 ----
-public class RussianCompanyInfo1
+public class RetrustPrincipalInfo
 ----
 
 == Свойства
@@ -18,16 +18,10 @@ public class RussianCompanyInfo1
 |===
 |Имя |Описание
 
-|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]`
-|Наименование организации (Обязательный).
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.OrganizationInfo_CL.adoc[Organization]`
+|Сведения об организации (Обязательный с условием). Обязательный, если доверяющий действует от имени юридического лица.
 
-|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]`
-|ИНН организации (Обязательный).
-
-|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Kpp]`
-|КПП организации (Обязательный). Указывается КПП, присвоенный организации по месту ее нахождения.
-
-|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Ogrn]`
-|ОГРН (Обязательный).
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo3_CL.adoc[Individual]`
+|Сведения по физическому лицу (Обязательный). Указываются сведения о физическом лице, в том числе, когда в доверенности в качестве доверяющего указывается юридическое лицо.
 
 |===
