--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc
@@ -36,17 +36,17 @@ List<string>)` |Создаёт новый экземпляр класса
 |===
 |Имя |Описание
 
-|`PowerOfAttorneyNumber` |Номер доверенности
-|`PowerOfAttorneyStartDate` |Дата совершения доверенности
-|`PowerOfAttorneyEndDate` |Срок действия доверенности
-|`RetrustType` |Признак возможности оформления передоверия
-|`Principal` |Доверитель
-|`PowerOfAttorneyMachineReadableFileID` |Идентификатор файла МЧД
-|`PowerOfAttorneyMachineReadableFileEncoding` |Кодировка файла МЧД
-|`RepresentativesSnils` |СНИЛСы представителей
-|`PrincipalsSnils` |СНИЛСы доверителей
-|`Representative` |Строковое представление представителя в формате ФИО (или ФИ) -- для физлица, или названия организации -- для юридического лица
-|`Signer` |Строковое представление подписанта в формате ФИО (или ФИ)
+|`http://msdn.microsoft.com/ru-ru/library/system.guid.aspx[PowerOfAttorneyNumber]` |Номер доверенности
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[PowerOfAttorneyStartDate]` |Дата совершения доверенности
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[PowerOfAttorneyEndDate]` |Срок действия доверенности
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRetrustType_EN.adoc[RetrustType]` |Признак возможности оформления передоверия
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Principal]` |Доверитель
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[PowerOfAttorneyMachineReadableFileID]` |Идентификатор файла МЧД
+|`Encoding PowerOfAttorneyMachineReadableFileEncoding` |Кодировка файла МЧД
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RepresentativesSnils]` |СНИЛСы представителей
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[PrincipalsSnils]` |СНИЛСы доверителей
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Representative]` |Строковое представление представителя в формате ФИО (или ФИ) -- для физлица, или названия организации -- для юридического лица
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Signer]` |Строковое представление подписанта в формате ФИО (или ФИ)
 |`RepresentativePowers` |Полномочия представителя
 |===
 
@@ -55,6 +55,34 @@ List<string>)` |Создаёт новый экземпляр класса
 [cols=",",options="header"]
 |===
 |Имя |Описание
+
+|`PowerOfAttorneyMachineReadableInfo(Guid,
+DateTime,
+DateTime?,
+PowerOfAttorneyRetrustType,
+string,
+string,
+string,
+string,
+Encoding,
+List<string>,
+List<string>,
+List<string>)`
+a|Создаёт новый экземпляр класса `PowerOfAttorneyMachineReadableInfo`.
+
+.Параметры:
+* `powerOfAttorneyNumber` -- Номер доверенности
+* `powerOfAttorneyStartDate` -- Дата совершения доверенности
+* `powerOfAttorneyEndDate` -- Срок действия доверенности
+* `retrustType` -- Признак возможности передоверия
+* `representative` -- Представитель
+* `signer` -- Подписант
+* `principal` -- Доверитель
+* `powerOfAttorneyMachineReadableFileID` -- Идентификатор файла доверенности
+* `powerOfAttorneyMachineReadableFileEncoding` -- Кодировка файла МЧД
+* `representativesSnils` -- СНИЛСы представителей
+* `principalsSnils` -- СНИЛСы поручителей
+* `principalsInn` -- ИННы доверителей
 
 |`AddRepresentativePowers(string, bool)`
 a|Добавить полномочие.
