--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
@@ -47,9 +47,11 @@
 |`xref:Entities/PowerOfAttorneyEMCHDData.AddressInfo_CL.adoc[AddressInfo]` |Сведения об адресе (АдрТип)
 |`xref:Entities/PowerOfAttorneyEMCHDData.BranchOfRussianEntityInfo_CL.adoc[BranchOfRussianEntityInfo]` |Сведения о филиале (обособленном подразделении) юридического лица (ФилПерПолн)
 |`xref:Entities/PowerOfAttorneyEMCHDData.ConfirmationOfAuthorityDocument_CL.adoc[ConfirmationOfAuthorityDocument]` |Документ, подтверждающий полномочия лица, действующего без доверенности (ДокПдтвТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.DelegatedAuthorityPrincipalsInfo_CL.adoc[DelegatedAuthorityPrincipalsInfo]` |Сведения о лице (лицах), передавшем (передавших) полномочия (СвПередПолн)
 |`xref:Entities/PowerOfAttorneyEMCHDData.DelegatedPowerOfAttorneyPrincipal_CL.adoc[DelegatedPowerOfAttorneyPrincipal]` |Сведения о лице, передавшем полномочия (ПередПолн)
 |`xref:Entities/PowerOfAttorneyEMCHDData.FIO_CL.adoc[FIO]` |Фамилия, имя, отчество (при наличии) (ФИОТип)
 |`xref:Entities/PowerOfAttorneyEMCHDData.ForeignEntityInfo_CL.adoc[ForeignEntityInfo]` |Сведения об иностранном юридическом лице (СвИнОргТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.ForeignLegalEntityPrincipalInfo_CL.adoc[ForeignLegalEntityPrincipalInfo]` |Сведения об иностранном юридическом лице (или филиале (аккредитованном представительстве) иностранного юридического лица) (ИнОргДоверТип)
 |`xref:Entities/PowerOfAttorneyEMCHDData.HandwrittenSignature_CL.adoc[HandwrittenSignature]` |Рукописная подпись (ПодпРукопис)
 |`xref:Entities/PowerOfAttorneyEMCHDData.IndividualInfo_CL.adoc[IndividualInfo]` |Сведения о физическом лице (СведФЛТип)
 |`xref:Entities/PowerOfAttorneyEMCHDData.IndividualPrincipalInfo1_CL.adoc[IndividualPrincipalInfo1]` |Сведения о физическом лице (ФЛПерПолн)
@@ -64,7 +66,16 @@
 |`xref:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyDocument_CL.adoc[PowerOfAttorneyDocument]` |Состав и структура документа (Документ)
 |`xref:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyDocumentData_CL.adoc[PowerOfAttorneyDocumentData]` |Доверенность (Довер)
 |`xref:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyInfo_CL.adoc[PowerOfAttorneyInfo]` |Сведения о доверенности (СвДовТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.PrimaryPowerOfAttorneyInfo_CL.adoc[PrimaryPowerOfAttorneyInfo]` |Сведения о первоначальной доверенности (или доверенности, на основании которой осуществляется передоверие) (СвПервДоверТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.PrimaryPowerOfAttorneyPrincipal_CL.adoc[PrimaryPowerOfAttorneyPrincipal]` |Сведения о доверителе (доверителях) первоначальной доверенности (СвДоверПерв)
+|`xref:Entities/PowerOfAttorneyEMCHDData.PrimaryPowerOfAttorneyPrincipalInfo_CL.adoc[PrimaryPowerOfAttorneyPrincipalInfo]` |Сведения о доверителе (доверителях) первоначальной доверенности (СвДоверПерв)
 |`xref:Entities/PowerOfAttorneyEMCHDData.PrincipalInfo_CL.adoc[PrincipalInfo]` |Сведения о доверителе (Доверит)
+|`xref:Entities/PowerOfAttorneyEMCHDData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc[PrincipalWithoutPowerOfAttorneyInfo]` |Сведения о лице (лицах), в том числе законном представителе, действующем (действующих) без доверенности (ЛицоБезДовТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.RetrustPowerOfAttorneyDocumentData_CL.adoc[RetrustPowerOfAttorneyDocumentData]` |Передоверие (Передов)
+|`xref:Entities/PowerOfAttorneyEMCHDData.RussianLegalEntityPrincipalInfo_CL.adoc[RussianLegalEntityPrincipalInfo]` |Сведения о юридическом лице (РосОргДоверТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveIndividualInfo_CL.adoc[SoleExecutiveIndividualInfo]` |Сведения о физическом лице / руководителе юридического лица (иностранного юридического лица (или филиала (аккредитованного представительства) иностранного юридического лица)) (СвФЛТип)
+|`xref:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveManagementCompanyInfo_CL.adoc[SoleExecutiveManagementCompanyInfo]` |Сведения о единоличном исполнительном органе – управляющей компании (СВЮЛ)
+|`xref:Entities/PowerOfAttorneyEMCHDData.SoleProprietorInfo0_CL.adoc[SoleProprietorInfo0]` |Сведения об индивидуальном предпринимателе (СведИПТип)
 |`xref:Entities/PowerOfAttorneyEMCHDData.PrincipalsInfo_CL.adoc[PrincipalsInfo]` |Сведения о доверителе (доверителях) (СвДоверит)
 |`xref:Entities/PowerOfAttorneyEMCHDData.RepresentativesInfo_CL.adoc[RepresentativesInfo]` |Сведения о представителе (представителях) (СвУпПредТип)
 |`xref:Entities/PowerOfAttorneyEMCHDData.RepresentativePowersInfo_CL.adoc[RepresentativePowersInfo]` |Сведения о полномочиях представителя (представителей) (СвПолнТип)
@@ -147,7 +158,7 @@
 |`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.ParentPrincipalInfo_CL.adoc[ParentPrincipalInfo]`
 |Сведения о доверителе из доверенности, на основании которой осуществляется передоверие (СвДоверщП) -- 4.16
 |`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPrincipalInfo_CL.adoc[RetrustPrincipalInfo]`
-|Сведения о доверителе в порядке передоверия (СвДоверщ) -- 4.17
+|Сведения о доверителе в порядке передоверия (СвДоверщ) - 4.17
 |`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.OrganizationInfo_CL.adoc[OrganizationInfo]`
 |Сведения об организации (СвОргТип) -- 4.18
 |`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RussianCompanyInfo1_CL.adoc[RussianCompanyInfo1]`
@@ -172,8 +183,10 @@
 |`xref:Entities/PowerOfAttorneyFNSDOVELData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc[PrincipalWithoutPowerOfAttorneyInfo]` |Сведения о лице, действующем от имени юридического лица без доверенности (ЛицоБезДов)
 |`xref:Entities/PowerOfAttorneyFNSDOVELData.IndividualPrincipalInfo_CL.adoc[IndividualPrincipalInfo]` |Сведения о доверителе -- физическом лице (ФЛДоверТип)
 |`xref:Entities/PowerOfAttorneyFNSDOVELData.ForeignLegalEntityPrincipalInfo_CL.adoc[ForeignLegalEntityPrincipalInfo]` |Сведения о доверителе -- иностранном юридическом лице (ИнОргДовер)
-|`xref:Entities/PowerOfAttorneyFNSDOVELData.HeadOfSeparateDivisionInfo_CL.adoc[PowerOfAttorneyFNSDOVELData.HeadOfSeparateDivisionInfo_CL.adoc]` |Сведения о руководителе обособленного подразделения (СвРукОП)
+|`xref:Entities/PowerOfAttorneyFNSDOVELData.HeadOfSeparateDivisionInfo_CL.adoc[HeadOfSeparateDivisionInfo]` |Сведения о руководителе обособленного подразделения (СвРукОП)
+|`xref:Entities/PowerOfAttorneyFNSDOVELData.IdentityDocumentInfo_CL.adoc[IdentityDocumentInfo]` |Сведения о документе, удостоверяющем личность физического лица (УдЛичнФЛТип)
 |`xref:Entities/PowerOfAttorneyFNSDOVELData.IndividualPrincipalInfo_CL.adoc[IndividualPrincipalInfo]` |Сведения о доверителе -- физическом лице (ФЛДоверТип)
+|`xref:Entities/PowerOfAttorneyFNSDOVELData.IndividualPrincipalInfo1_CL.adoc[IndividualPrincipalInfo1]` |Сведения по физическому лицу (СвФЛ)
 |`xref:Entities/PowerOfAttorneyFNSDOVELData.RepresentativeAndAuthorityInfo_CL.adoc[RepresentativeAndAuthorityInfo]` |Сведения о доверителе -- физическом лице (ФЛДоверТип)
 |`xref:Entities/PowerOfAttorneyFNSDOVELData.RepresentativeInfo_CL.adoc[RepresentativeInfo]` |Сведения об уполномоченном представителе (уполномоченных представителях) (СвУпПредТип)
 |`xref:Entities/PowerOfAttorneyFNSDOVELData.IndividualInfo_CL.adoc[IndividualInfo]` |Сведения о физическом лице (СведФЛТип)
@@ -251,5 +264,8 @@
 |`xref:Entities/PowerOfAttorneyEMCHDData.RevocationPossibleType_EN.adoc[RevocationPossibleType]` |Признак безотзывной доверенности
 
 |`xref:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveAuthorityType_EN.adoc[SoleExecutiveAuthorityType]` |Вид полномочий единоличного исполнительного органа
+
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustType_EN.adoc[RetrustType]`
+|Признак возможности оформления передоверия.
 
 |===
