Поправил пару ошибок сборки

--- a/modules/ROOT/partials/bo-om-services-entities.adoc
+++ b/modules/ROOT/partials/bo-om-services-entities.adoc
@@ -161,6 +161,7 @@
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.RepresentativeAndAuthorityInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.RepresentativeInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IndividualInfo_CL.adoc[]
+******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IndividualPrincipalInfo1_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.OrganizationInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.AddressInfo_CL.adoc[]
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.IdentityDocumentInfo_CL.adoc[]
