--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc
@@ -19,7 +19,7 @@ public sealed class PrincipalWithoutPowerOfAttorneyInfo
 |Имя |Описание
 
 |`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveAuthorityType_EN.adoc[AuthorityType]` |Вид полномочий единоличного исполнительного органа
-|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveManagementCompanyInfo_CL[ManagementCompanyInfo]` |Сведения о единоличном исполнительном органе – управляющей компании
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveManagementCompanyInfo_CL.adoc[ManagementCompanyInfo]` |Сведения о единоличном исполнительном органе – управляющей компании
 |`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveIndividualInfo_CL.adoc[IndividualInfo]` |Сведения о единоличном исполнительном органе - физическом лице
 |`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.LegalEntityInfo_CL.adoc[SoleProprietorInfo]` |Сведения о единоличном исполнительном органе -- индивидуальном предпринимателе
 
