--- a/modules/cards/pages/general-information.adoc
+++ b/modules/cards/pages/general-information.adoc
@@ -22,7 +22,7 @@
 +
 . Задачи, которые не могут быть решены с помощью API Docsvision.
 
-Если при решении определённой задачи потребуется задействовать методы обоих уровней API нужно помнить, что каждый слой обладает собственным механизмом кэширования, что может повлиять на актуальность данных на одном слое по сравнению в другим.
+Если при решении определённой задачи потребуется задействовать методы обоих уровней API нужно помнить, что каждый слой обладает собственным механизмом кэширования, что может повлиять на актуальность данных на одном слое по сравнению с другим.
 
 В примерах использования API, рассмотренных в разделе xref:ROOT:development.adoc[Руководство по разработке], если это возможно, одна задача будет решена как методами базового API, так и методами объектной модели, что позволит оценить удобство и функциональные возможности разных уровней при решении конкретной задачи.
 
